Added ktlint for android